Ejemplo Alga roja

--- a/sistemas-de-lindenmayer.ipynb
+++ b/sistemas-de-lindenmayer.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "def next(s):\n",
     "    result = []\n",
-    "    for c in s:\n",
+    "    for c in s:  # Las reglas se aplican a toda la secuencia\n",
     "        for rule in rules:\n",
     "            new_item = rule(c)\n",
     "            if new_item is not None:\n",
@@ -119,6 +119,212 @@
     "A -> − B F + A F A + F B −\n",
     "\n",
     "B -> + A F − B F B − F A +\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a crear una clase par representar las reglas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generación: 0 Status: A 1\n",
+      "Generación: 1 Status: AB 2\n",
+      "Generación: 2 Status: ABA 3\n",
+      "Generación: 3 Status: ABAAB 5\n",
+      "Generación: 4 Status: ABAABABA 8\n",
+      "Generación: 4 Status: ABAABABAABAAB 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Rule:\n",
+    "\n",
+    "    def __init__(self, target, production):\n",
+    "        self.target = target\n",
+    "        self.production = production\n",
+    "        \n",
+    "    def __call__(self, s):\n",
+    "        if s == self.target:\n",
+    "            return self.production\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return '{} -> {}'.format(self.target, self.production)\n",
+    "\n",
+    "rules = set([\n",
+    "    Rule('A', 'AB'),\n",
+    "    Rule('B', 'A'),\n",
+    "    ])\n",
+    "\n",
+    "initial = 'A'\n",
+    "\n",
+    "# La función que pasa de una cadena de simbolos a la siguiente\n",
+    "\n",
+    "def next(s):\n",
+    "    result = []\n",
+    "    for c in s:  # Las reglas se aplican a toda la secuencia\n",
+    "        for rule in rules:\n",
+    "            new_item = rule(c)\n",
+    "            if new_item is not None:\n",
+    "                result.append(new_item)\n",
+    "    return ''.join(result)\n",
+    "\n",
+    "status = initial\n",
+    "for i in range(5):\n",
+    "    print('Generación:', i, 'Status:', status, len(status))\n",
+    "    status = next(status)\n",
+    "print('Generación:', i, 'Status:', status, len(status))\n",
+    "    \n",
+    "\n",
+    "def rule2(c):\n",
+    "    if c == 'B':\n",
+    "        return 'A'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las reglas completas para la producción del alga roja son:\n",
+    "    \n",
+    "    a -> b|c\n",
+    "    b -> b\n",
+    "    c -> b|d\n",
+    "    d -> e\\d\n",
+    "    e -> f\n",
+    "    f -> g\n",
+    "    g -> h(a)\n",
+    "    h -> h\n",
+    "    ( -> (\n",
+    "    ) -> )\n",
+    "    | -> |\n",
+    "    / -> \\\n",
+    "    \\ -> /\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generación: 0 Status: a 1\n",
+      "Generación: 1 Status: b|c 3\n",
+      "Generación: 2 Status: b|b|d 5\n",
+      "Generación: 3 Status: b|b|e\\d 7\n",
+      "Generación: 4 Status: b|b|f/e\\d 9\n",
+      "Generación: 5 Status: b|b|g\\f/e\\d 11\n",
+      "Generación: 6 Status: b|b|h(a)/g\\f/e\\d 16\n",
+      "Generación: 7 Status: b|b|h(b|c)\\h(a)/g\\f/e\\d 23\n",
+      "Generación: 8 Status: b|b|h(b|b|d)/h(b|c)\\h(a)/g\\f/e\\d 32\n"
+     ]
+    }
+   ],
+   "source": [
+    "rules = set([\n",
+    "    Rule('a', 'b|c'),\n",
+    "    Rule('b', 'b'),\n",
+    "    Rule('c', 'b|d'),\n",
+    "    Rule('d', 'e\\\\d'),\n",
+    "    Rule('e', 'f'),\n",
+    "    Rule('f', 'g'),\n",
+    "    Rule('g', 'h(a)'),\n",
+    "    Rule('h', 'h'),\n",
+    "    Rule('(', '('),\n",
+    "    Rule(')', ')'),\n",
+    "    Rule('|', '|'),\n",
+    "    Rule('/', '\\\\'),\n",
+    "    Rule('\\\\', '/'),\n",
+    "    ])\n",
+    "\n",
+    "initial = 'a'\n",
+    "\n",
+    "status = initial\n",
+    "for i in range(8):\n",
+    "    print('Generación:', i, 'Status:', status, len(status))\n",
+    "    status = next(status)\n",
+    "print('Generación:', i+1, 'Status:', status, len(status))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b|b|h(b|b|d)/h(b|c)\\h(a)/g\\f/e\\d\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image, ImageDraw\n",
+    "\n",
+    "green = (33, 233, 33)\n",
+    "\n",
+    "img = Image.new('RGB', (500, 500), color=(233,233,233))\n",
+    "x = 5\n",
+    "y = 250\n",
+    "print(status)\n",
+    "\n",
+    "def pipe():\n",
+    "    global x, y, img, green\n",
+    "    draw = ImageDraw.Draw(img)\n",
+    "    lines = [\n",
+    "        (x+5, y-5),\n",
+    "        (x+5, y+5)\n",
+    "    ]\n",
+    "    draw.line(lines, green)\n",
+    "\n",
+    "def b():\n",
+    "    global x, y, img, green\n",
+    "    draw = ImageDraw.Draw(img)\n",
+    "    lines = [\n",
+    "        (x+5, y-5),\n",
+    "        (x-5, y-5),\n",
+    "        (x-5, y+5),\n",
+    "        (x+5, y+5)\n",
+    "    ]\n",
+    "    draw.line(lines, green, width=2)\n",
+    "    x += 10\n",
+    "    \n",
+    "b(); pipe(); b()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAIAAABEtEjdAAAHHElEQVR4nO3csQmDYBRGUQ1ZxC3c\nv3KVt0WK1CFFfjBczmksRHjV5avcZ2YDoOVx9wEArCfuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHi\nDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIO\nECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4Q\nJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk\n7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTu\nAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4A\nQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB\n4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHi\nDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIO\nECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4Q\nJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk\n7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTu\nAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4A\nQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB\n4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHiDhAk7gBB4g4QJO4AQeIOECTuAEHi\nDhAk7gBB4g4QJO4AQeIOECTuAEHiDhC0H3P88v21XatOAWAVyx0g6Pl+fBrg53Z+fQvAv7HcAYLE\nHSBI3AGCxB0gSNwBgsQdIEjcAYLEHSDI7wcAgix3gKB9Zu6+AYDFLHeAIHEHCBJ3gCBxBwgSd4Ag\ncQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBx\nBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEH\nCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcI\nEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgS\nd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3\ngCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneA\nIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4Ag\ncQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBx\nBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEH\nCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcI\nEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgS\nd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3\ngCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneA\nIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCBJ3gCBxBwgSd4Ag\ncQcIEneAIHEHCBJ3gCBxBwgSd4AgcQcIEneAIHEHCHoBxAoS092JFC8AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<PIL.Image.Image image mode=RGB size=500x500 at 0x7F8AC40B6358>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img"
    ]
   },
   {
