--- a/008_booleans.ipynb
+++ b/008_booleans.ipynb
@@ -23,14 +23,14 @@
     "\n",
     "Todas las operaciones de comparación producen como resultado un valor booleano. Las operaciones de camparación son las  mismas que se definen en matematicas, pero por limitaciones técnicas, a veces el símbolo no es el mismo, opor ejemplo, para la comparacion \"Es menor o igual que\", cuyo símbolo es ≤, usamos la combinación de símbolos `<=`. También hay que hacer notar que el operador para comprobaar si dos valores son iguales es `==`, es decir, dos veces el simbolo igual (Esto es así porque el ya usamos el símbolo `=` para la asignación de valores a variables)\n",
     "\n",
-    "| operador | Significado |\n",
-    "|----------|-------------|\n",
-    "| ==       | `True` si ambos valores son iguales |\n",
-    "| <=       | `True` si el operando izquierdo es menor o igual (≤) que el derecho |\n",
-    "| <        | `True` si el operando izquierdo es estríctamente menor (<) que el derecho |\n",
-    "| >=       | `True` si el operando izquierdo es mayor o igual (⩾) que el derecho |\n",
-    "| <        | `True` si el operando izquierdo es estríctamente mayor (<) que el derecho |\n",
-    "| !=       | `True` si ambos valores son diferentes (≠) |\n",
+    "| operador | El resultado es verdadero si                                    |\n",
+    "|----------|-----------------------------------------------------------------|\n",
+    "| ==       | Ambos valores son iguales                                       |\n",
+    "| !=       | Ambos valores son diferentes (≠)                                |\n",
+    "| <=       | El operando izquierdo es menor o igual (≤) que el derecho       |\n",
+    "| <        | El operando izquierdo es estríctamente menor (<) que el derecho |\n",
+    "| >=       | El operando izquierdo es mayor o igual (⩾) que el derecho       |\n",
+    "| <        | El operando izquierdo es estríctamente mayor (<) que el derecho |\n",
     "\n",
     "Estas operaciones funcionan sobre todos los tipos de datos, no sólo los numéricos. Por ejemplo, podemos comparar dos\n",
     "cadenas de texto igual que lo hariamos con números:"
@@ -45,13 +45,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True False\n"
      ]
     }
    ],
    "source": [
     "s = 'hola'\n",
-    "print(s == 'hola')"
+    "print(s == 'hola', s != 'hola')"
    ]
   },
   {
