--- a/003_listas.ipynb
+++ b/003_listas.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "32"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,6 +213,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Índices\n",
+    "\n",
+    "En las listas, así como en otras secuencias que veremos más adelante, su usan\n",
+    "índices para indicar las posiciones, no el orden natural, de forma que el elemento en \n",
+    "la primera posición no es el uno, sino el cero. Para entender esto, es bueno pensar que el índice **no** indica la posición, sino **el número de elementos que estan antes del que estamos considerando**. Según está definición, se ve claro porqué el primero elemento es el cero: no hay ninguno antes que él.\n",
+    "\n",
+    "Otra forma de considerarlo es pensar que los índices no apuntan a los elementos de la secuencia en si, sino a los espacios que hay entre ellos. El siguiente diagrama intenta mostrar esto:\n",
+    "\n",
+    "![Slides](art/slices.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Índices negativos\n",
+    "\n",
     "Podemos usar índices negativos, en ese caso, empezamos a contar por el final de la lista y contamos hacia atras. Así que el último valor de la lista l tambien se puede obtener con `l[-1]`."
    ]
   },
@@ -341,6 +358,81 @@
    ],
    "source": [
     "l[3:]  # Desde el tercer elemento hasta el final"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operaciones con listas\n",
+    "\n",
+    "Podemos saber cuantos elementos hay en una lista usando la función `len`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [32, 44, 59, 62]\n",
+    "len(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos añadir elementos a una lista con el método `append`, que los añade al final, o con el método `insert`, que los añade con el índice adecuado (todos los elementos que vienen despues ven incrementado su índice, lógicamente)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[32, 44, 59, 62, 834]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [32, 44, 59, 62]\n",
+    "l.append(834)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 32, 44, 59, 62]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [32, 44, 59, 62]\n",
+    "l.insert(0, 12)\n",
+    "print(l)"
    ]
   },
   {
