--- a/008_booleans.ipynb
+++ b/008_booleans.ipynb
@@ -58,6 +58,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Condiciones trabajando con secuencias\n",
+    "\n",
+    "Podemos comprobar si un elemento determinado está en una secuencia, como una lista o una cadena de texto, usando el operador `in`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [123, 12, 45, 2, 44, -1]\n",
+    "print(45 in l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocales = 'aeiou'\n",
+    "print('f' in vocales)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Operadores lógicos\n",
     "\n",
     "Los operadores lógicos nos permiten evaluar condiciones más complejas. Los operadores `and`, `or` nos permiten realizar las operaciones _y lógico_ y _o lógico_, cuyos resultados se muestran en la siguiente tabla (Abreviamos `true` y `False` como T y F respectivamente):\n",
