Modulo de listasm ficheros y ejemplo de scrapping

--- a/003_listas.ipynb
+++ b/003_listas.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Hemos visto por ahora un solo tipo de datos, los números. Hay más tipos de datos que veremos más adelante, pero Python, como todos los lenguajes, tiene también formas de organizar o agrupar varios datos en una estructura mayor, son las llamadas **estructuras de datos**. \n",
     "\n",
-    "Una de las más simples en Python son las **listas**. Una lista de números es simplemente una secuencia de datos (en nestro caso, números), donde se almacena un valor distinto en cada posicion, siendo la primera posición el 0. "
+    "Una de las más simples en Python son las **listas**. Una lista de números es simplemente una secuencia de datos (en nuestro caso, números), donde se almacena un valor distinto en cada posicion, siendo la primera posición el 0. "
    ]
   },
   {
