--- a/viernes_6_abril_2018.ipynb
+++ b/viernes_6_abril_2018.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,11 +51,11 @@
     "    'conspirarais', 'ostensivo', 'emplazaría', 'descabecemos', 'ostentaré','ataste', 'recelaremos', 'impeler', 'magnificarais', 'encargaban',\n",
     "    'despabila', 'injurias', 'borrarías', 'huyeseis', 'fructificará', 'sobrecarga', 'recompenses', 'encarguen', 'biselarían', 'parabólicas',\n",
     "    'cargases', 'arrepintió', 'demostraron', 'cuarteladas', 'brevedad', 'hiel', 'decanté', 'fantástica', 'cremación', 'lactarias', 'desganaban',\n",
-    "    'supusieran', 'coagularás', 'calafateados', 'imitador', 'aplaudías', 'rasarán', 'cosquillearas', 'hidrófila', 'pestañean', 'reelectos',\n",
+    "    'supusieran', 'coagularás', 'calafateados', 'murciélago', 'imitador', 'aplaudías', 'rasarán', 'cosquillearas', 'hidrófila', 'pestañean', 'reelectos',\n",
     "    'preocuparé', 'caucásicas', 'prorrogamos', 'prevenidamente', 'acriminará', 'subsanáramos', 'satisfarías', 'cubrirías', 'embauláis', 'conste',\n",
     "    'inmoderado', 'gutural', 'rabotada', 'rellenada', 'favorezcamos', 'persianos', 'decorasteis', 'enfurecerías', 'trasegase', 'condicionases', 'colaboremos', \n",
     "    'desenchufase', 'bizcaríais', 'suspensivas', 'fulminemos', 'personábamos', 'fiáis', 'sigilases', 'homologarais', 'substrajese', 'conoceré',\n",
-    "    'aprovisionará', 'cargabais', 'substraían', 'endeudes', 'desobedecerás', 'recuperativas', 'vienesa', 'retardaseis', 'cromaréis', 'envidíes',\n",
+    "    'aprovisionará', 'cargabais', 'substraían', 'franja','endeudes', 'desobedecerás', 'recuperativas', 'vienesa', 'retardaseis', 'cromaréis', 'envidíes',\n",
     "    'haríais', 'solidificaría', 'quincallero', 'queridas', 'quemarais', 'quebradiza', 'quitada', 'chachareo', 'jorobaste', 'hortelano', 'enlucidos', 'digne', 'apisonan', 'registrarán', 'enfriabas', 'demencia', 'detuvierais', 'maúllos',\n",
     "    'elongaciones', 'volatilizaremos', 'cataréis', 'desautorizar', 'liquidación', 'notificará', 'debatiésemos', 'esparzan', 'pintarías', 'charlaremos',\n",
     "    'canicie', 'extraeríais', 'humillarás', 'transfundirían', 'cabalgarían', 'terrores', 'infando', 'disputo', 'diera', 'abominara', 'antecederás', 'aguardé',\n",
@@ -67,7 +67,7 @@
     "    'anticipáis', 'reconoceré', 'acaezco', 'xenofobia', 'kilogramos', 'agobiaríais', 'personificasen', 'practicarías', 'rasparéis', 'rasparíais', 'repugnen', 'rescataréis',\n",
     "    'desobstruyeses', 'anadeásemos', 'ñu', 'perdurases', 'confortaron', 'acentuar', 'merecerías', 'enunciación', 'traspiés', 'demueles', 'vigilaríais',\n",
     "    'avicultura', 'sanguinarios', 'pasmara', 'enrabiar', 'zutano', 'abroqueláramos', 'recaidas', 'adiposo', 'sinvergüenzas', 'cuidaban', 'zoológicas', 'hederías',\n",
-    "    'enciclopedia', 'hospedaban', 'láureo', 'regalado', 'tósigos', 'entreabras', 'atrocidades', 'bloqueas', 'extensibles',\n",
+    "    'enciclopedia', 'hospedaban', 'láureo', 'regalado', 'naranja', 'tósigos', 'entreabras', 'atrocidades', 'bloqueas', 'extensibles',\n",
     "    'contrataría', 'dispersaban', 'concentraron']\n"
    ]
   },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -91,9 +91,7 @@
      "output_type": "stream",
      "text": [
       "franja\n",
-      "granja\n",
-      "naranja\n",
-      "zanja\n"
+      "naranja\n"
      ]
     }
    ],
@@ -112,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -120,9 +118,7 @@
      "output_type": "stream",
      "text": [
       "franja\n",
-      "granja\n",
-      "naranja\n",
-      "zanja\n"
+      "naranja\n"
      ]
     }
    ],
@@ -144,21 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-217-dd108ce15c04>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-217-dd108ce15c04>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if ...\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "persianos\n",
+      "hortelano\n",
+      "zutano\n"
      ]
     }
    ],
    "source": [
     "for p in palabras:\n",
-    "    if ..."
+    "    if 'ano' in p:\n",
+    "        print(p)"
    ]
   },
   {
@@ -170,12 +168,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "menorquina\n",
+      "cosquillearas\n",
+      "quincallero\n",
+      "desautorizar\n"
+     ]
+    }
+   ],
    "source": [
     "for p in palabras:\n",
-    "    ..."
+    "    if 'a' in p and 'e' in p and 'i' in p and 'o' in p and 'u' in p:\n",
+    "        print(p)"
    ]
   },
   {
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,14 +217,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "la palabra reservada `def` nos permite definir funciones. Después del def viene el nombre que le queremos dar a la función y luego, entre paréntesis, el parámetro o parámetros de entrada de la función, separados por comas. Si no hubiera ningún paŕametro, aún así hemos de incluir los paréntesis. Finalmente, viene el signo de dos puntos.\n",
+    "la palabra reservada `def` nos permite definir funciones. Después del def viene el nombre que le queremos dar a la función y luego, entre paréntesis, el parámetro o parámetros de entrada de la función, separados por comas. Si no hubiera ningún parámetro, aun así hemos de incluir los paréntesis. Finalmente, viene el signo de dos puntos.\n",
     "\n",
     "Todo el código que aparezca a continuación, indentado a un nivel mayor que la palabra `def`, forma parte del cuerpo o bloque de la función. Ahora podemos llamar o invocar a esta función desde cualquier parte de nuestro programa, simplemente usando su nombre seguido de los parámetros, entre paréntesis. Por ejemplo, el siguiente código imprime el resultado de calcular el perímetro de las circunferencia de radio 1 a 6:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -239,15 +249,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La primera línea dentro de la definición de la función puede ser, opcionalmente, una cadena de texto. Este texto no tiene ningún efecto sobre el código, por lo que se puede considerar como un comentario, pero internamente ese texto se convierte en la documentación interna de la función. Es esta documentación interna, llamada `docstring`, la que muestra la función `help()`, ya que puede ser accedida en tiempo de ejecución. Es muy recomendable incluir este tipo de documentación, especificando al menos los parámetros que acepta y el resultado que devuelve.\n",
-    "\n",
-    "La sentencia `return` permite especificar el valor o valores que devuelve la función (Si no se especifica ningún valor de retorno, la función retornará None).\n",
+    "La sentencia `return` permite especificar el valor o valores que devuelve la función (Si no se especifica ningún valor de retorno, la función retornará `None`).\n",
     "\n",
     "El paso de parámetros también es interesante, y ofrece posibilidades en Python que no todos los lenguajes soportan.\n",
     "\n",
+    "### Paso de parámetros por posición\n",
+    "\n",
     "La forma habitual de asignación de parámetros es por posición, es decir, cuando llamemos a una funcion definida con varios parámetros, el primer dato que pongamos tras los paréntesis ocupará el lugar del primer parámetro, el segundo valor ocupará el segundo parámetro y así sucesivamente. En estos casos, hay que pasar tantos valores como parámetros se hayan definido en la función.\n",
     "\n",
-    "Python soporta también el uso de parámetros por defecto, el paso de parámetros por nombre y el paso de argumentos en número variable."
+    "Python soporta también el uso de parámetros por defecto, el paso de parámetros por nombre y el paso de argumentos en número variable, que se verán más adelante."
    ]
   },
   {
@@ -262,12 +272,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "menorquina\n",
+      "cosquillearas\n",
+      "quincallero\n",
+      "desautorizar\n"
+     ]
+    }
+   ],
    "source": [
     "def tiene_todas_las_vocales(s):\n",
-    "    ...\n",
+    "    if 'a' in s and 'e' in s and 'i' in s and 'o' in s and 'u' in s:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "for palabra in palabras:\n",
     "    if tiene_todas_las_vocales(palabra):\n",
@@ -336,17 +360,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anatomy-of-a-notebook.png    globo.jpg\t\t   pato.jpg\r\n",
-      "anatomy-of-a-notebook.xcf    ipython.png\t   PrimroseDM0708_468x259.jpg\r\n",
-      "avengers.jpg\t\t     ipython.xcf\t   python-canarias-logo.svg\r\n",
-      "clark-kent.png\t\t     julia_logo.svg\t   python_logo.svg\r\n",
-      "clark-kent.xcf\t\t     ministry-of-walk.png  R_logo.svg\r\n",
-      "communication.svg\t     ministry-of-walk.xcf  sello.png\r\n",
-      "CrocusDM0708_468x643.jpg     new-notebook.png\t   silverDM0708_468x143.jpg\r\n",
-      "dandelionDM0708_468x441.jpg  new-notebook.xcf\t   spacex.png\r\n",
-      "dashboard.png\t\t     notebook.jpeg\t   superman.png\r\n",
-      "dashboard.xcf\t\t     notebook.png\t   superman.xcf\r\n",
-      "fernando-perez.png\t     notebook.xcf\t   superpython.svg\r\n"
+      "anatomy-of-a-notebook.png    globo.jpg\t\t   pato.jpg\n",
+      "anatomy-of-a-notebook.xcf    ipython.png\t   PrimroseDM0708_468x259.jpg\n",
+      "avengers.jpg\t\t     ipython.xcf\t   python-canarias-logo.svg\n",
+      "clark-kent.png\t\t     julia_logo.svg\t   python_logo.svg\n",
+      "clark-kent.xcf\t\t     ministry-of-walk.png  R_logo.svg\n",
+      "communication.svg\t     ministry-of-walk.xcf  sello.png\n",
+      "CrocusDM0708_468x643.jpg     new-notebook.png\t   silverDM0708_468x143.jpg\n",
+      "dandelionDM0708_468x441.jpg  new-notebook.xcf\t   spacex.png\n",
+      "dashboard.png\t\t     notebook.jpeg\t   superman.png\n",
+      "dashboard.xcf\t\t     notebook.png\t   superman.xcf\n",
+      "fernando-perez.png\t     notebook.xcf\t   superpython.svg\n"
      ]
     }
    ],
