Más material para pygames

--- a/os.ipynb
+++ b/os.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El módulo os: acceso al sistema operativo\n",
-    "\n",
-    "\n",
+    "## El módulo os: acceso al sistema operativo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### El módulo os.path\n",
     "\n",
     "Este submódulo está pensado para realizar operaciones con el sistema de archivos\n",
