--- a/pygame.ipynb
+++ b/pygame.ipynb
@@ -286,6 +286,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Solución**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygame\n",
+    "import time\n",
+    "\n",
+    "image_filename = 'superman-logo.png'\n",
+    "\n",
+    "pygame.init()\n",
+    "screen = pygame.display.set_mode((640, 480), 0, 24)\n",
+    "pygame.display.set_caption(\"Hola, Mundo!\")\n",
+    "\n",
+    "img = pygame.image.load(image_filename).convert_alpha()\n",
+    "width, height = img.get_size()\n",
+    "screen.blit(img, (320 - width//2, 240 - height//2))  # Esta es la línea modificada\n",
+    "pygame.display.update()\n",
+    "time.sleep(5)\n",
+    "pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**La llamada a pygame.display.update:** PyGAme usa, como casi todas las librerías de juegos, una técnica llamada de [doble buffer o _double buffering_](https://es.wikipedia.org/wiki/Buffer_m%C3%BAltiple). \n",
     "\n",
     "Usando esta tecnica, las modificaciones que se hacen a la pantalla, no se aplican de forma inmediata, sino que se aplican en un buffer, algo así como una pantalla virtual, o fantasma. De esa forma se puede realizar varias transpformaciones a la imagen sin que estas aparezcan en la pantalla final. Solo cuando estemos satizsfechos con todas las transformaciones realizadas se llama a la función `update` para que actualiza la pantalla al contenido de la pantalla cirtual. \n",
@@ -309,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,8 +366,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejercicio:** Modificar el siguiente programa para que muestre 50 estrellas, en posiciones al azar dentro de la pantalla. recordar que el módulo random tiene una funcion `random.randrange`, que funciona de forma parecida a `range`, pero en vez de devolvernos el rango de numeros, devuelve un valor al azar dentro de dicho \n",
-    "rango. `random.randrange(0, 100)`, por ejemplo, devuelve un número entre 0 y 99."
+    "**Ejercicio:** Modificar el siguiente programa para que muestre 50 estrellas, en posiciones al azar dentro de la pantalla, en vez de una\n",
+    "sola en la posición $50,50$. Recordar que el módulo `random` tiene una funcion `random.randrange`, que funciona de forma parecida a `range`, pero en vez de devolvernos el rango de numeros, devuelve un valor al azar dentro de dicho \n",
+    "rango. `random.randrange(100)`, por ejemplo, devuelve un número entre 0 y 99. `random.randrange(1, 11)` devuelve un número entero al azar entre $1$ y $10$."
    ]
   },
   {
@@ -346,15 +377,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random  # Vamos a necesitar números aleatorios\n",
+    "import pygame\n",
+    "import time\n",
+    "import random# Vamos a necesitar números aleatorios\n",
     "\n",
     "pygame.init()\n",
-    "pygame.display.set_caption(\"Campo de estrellas\")\n",
+    "pygame.display.set_caption(\"Campo de estrellas 2\")\n",
     "screen = pygame.display.set_mode((640, 480), 0, 24)\n",
     "\n",
     "WHITE = (255, 255, 255)\n",
     "                \n",
     "pygame.draw.circle(screen, WHITE, (50, 50), 2)  \n",
+    "pygame.display.update()\n",
+    "time.sleep(5)    \n",
+    "pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Solución**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygame\n",
+    "import time\n",
+    "import random# Vamos a necesitar números aleatorios\n",
+    "\n",
+    "pygame.init()\n",
+    "pygame.display.set_caption(\"Campo de estrellas 2\")\n",
+    "screen = pygame.display.set_mode((640, 480), 0, 24)\n",
+    "\n",
+    "WHITE = (255, 255, 255)\n",
+    "                \n",
+    "for _ in range(50):  # El nombre _ suele indicar que no me interesa su valor, solo que se repita 50 veces\n",
+    "    x = random.randrange(640)\n",
+    "    y = random.randrange(480)\n",
+    "    pygame.draw.circle(screen, WHITE, (x, y), 2)  \n",
+    "pygame.display.update()\n",
+    "time.sleep(5)    \n",
+    "pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Problema:** Modificar el programa anterior para que varíe el color de la estrella (Puedes usar `randrange` para calcular \n",
+    "los valores de rojo, verde y azul al azar y obtenter\n",
+    "así un color aleatorio), el radio, es decir, el tamaño de la estrella, o las dos cosas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Solución**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygame\n",
+    "import time\n",
+    "import random# Vamos a necesitar números aleatorios\n",
+    "\n",
+    "pygame.init()\n",
+    "pygame.display.set_caption(\"Campo de estrellas 2\")\n",
+    "screen = pygame.display.set_mode((640, 480), 0, 24)\n",
+    "\n",
+    "def random_color():\n",
+    "    rojo = random.randrange(255)  # Componente roja\n",
+    "    verde = random.randrange(255)  # Componente verde\n",
+    "    azul = random.randrange(255)  # Componente azul\n",
+    "    return (rojo, verde, azul)\n",
+    "    \n",
+    "def random_size():\n",
+    "    return random.randrange(1, 5)\n",
+    "        \n",
+    "for _ in range(50):  # El nombre _ suele indicar que no me interesa su valor, solo que se repita 50 veces\n",
+    "    x = random.randrange(640)\n",
+    "    y = random.randrange(480)\n",
+    "    color = random_color()\n",
+    "    r = random_size()\n",
+    "    pygame.draw.circle(screen, color, (x, y), r)  \n",
     "pygame.display.update()\n",
     "time.sleep(5)    \n",
     "pygame.quit()"
@@ -408,6 +523,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pygame\n",
+    "import time\n",
+    "import random\n",
+    "\n",
     "pygame.init()\n",
     "pygame.display.set_caption(\"Campo de estrellas\")\n",
     "screen = pygame.display.set_mode((640, 480), 0, 24)\n",
@@ -425,15 +544,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pero... El resultado no es exactamente el que queriamos; el pixel se mueve a la derecha, pero no como esperabamos, los circulos que pintamos antes siguen apareciendo. Eso es porque pygame ha hecho exactamente lo que le hemos pedido, y nunca le pedimos que borrara lo anterior. La forma más sencilla de solucionarlo es borrar la pantalla al principio de cada fotograma o _frame_ y volver a pintar la estrella. Podemos borrar toda la pantalla con "
+    "Pero... El resultado no es exactamente el que queriamos; el pixel se mueve a la derecha, pero no como esperabamos, los circulos que pintamos antes siguen apareciendo. Eso es porque pygame ha hecho exactamente lo que le hemos pedido, y nunca le pedimos que borrara lo anterior. La forma más sencilla de solucionarlo es borrar la pantalla al principio de cada fotograma o _frame_ y volver a pintar la estrella. Podemos borrar toda la pantalla con el método `fill` que rellena con el color indicado una superficie:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pygame\n",
+    "import time\n",
+    "import random\n",
+    "\n",
     "pygame.init()\n",
     "pygame.display.set_caption(\"Campo de estrellas\")\n",
     "screen = pygame.display.set_mode((640, 480), 0, 24)\n",
@@ -460,10 +583,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pygame\n",
+    "import time\n",
+    "import random\n",
+    "\n",
     "pygame.init()\n",
     "pygame.display.set_caption(\"Campo de estrellas\")\n",
     "screen = pygame.display.set_mode((640, 480), 0, 24)\n",
@@ -496,32 +623,43 @@
    "source": [
     "## El bucle del juego\n",
     "\n",
-    "Vamos ahora a conseguir que nuestros juegos no duren 5 segundos. PAra eso vamos a \n",
+    "Vamos ahora a conseguir que nuestros juegos no duren 5 segundos. Para eso vamos a \n",
     "implementar lo que se conoce como el bucle del juego. El bucle del juego es un\n",
-    "código que se repite continuamente hasta que el juego termina. En este bucle, siempre se ralizan los siguientes pasos, y siempre en el mismo orden:\n",
+    "código que se repite continuamente hasta que el juego termina. En este bucle, \n",
+    "siempre se ralizan los siguientes pasos, y siempre en el mismo orden:\n",
     "\n",
-    "1) Se leen las estradas al juego: pulsaciones de teclas, movimientos del ratón, etc...\n",
+    "1) Se leen las **entradas al juego**: pulsaciones de teclas, movimientos del ratón, etc...\n",
     "\n",
-    "2) Se calcula, en base a esas entradas y al estado del juego, el nuevo estado del juego\n",
+    "2) Se calcula, en base a esas entradas y al estado del juego, el nuevo **estado del juego**\n",
     "\n",
-    "3) Se actualizan la pantalla para mostrar el nuevo estado\n",
+    "3) Se **actualizan la pantalla** para mostrar el nuevo estado\n",
     "\n",
-    "4) Repetir hasta que el juego termine\n",
+    "4) **Repetir** hasta que el juego termine\n",
     "\n",
     "El esquema básico ahora para nuestros juegos será el siguiente:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pygame\n",
+    "import time\n",
+    "import random\n",
+    "\n",
     "pygame.init()\n",
     "pygame.display.set_caption(\"Campo de estrellas\")\n",
     "screen = pygame.display.set_mode((640, 480), 0, 24)\n",
     "\n",
     "# Parte de inicializacion del juego\n",
+    "stars = []\n",
+    "for _ in range(50):\n",
+    "    x = random.randrange(640)\n",
+    "    y = random.randrange(480)\n",
+    "    star = [x, y]\n",
+    "    stars.append(star)\n",
     "\n",
     "in_game = True  # Indicador lógico para saber cuando debemos terminar el juego\n",
     "while in_game:\n",
@@ -530,10 +668,16 @@
     "        if event.type == pygame.QUIT:\n",
     "            in_game = False\n",
     "    # Recalcular el estado del juego, en base al estado actual y a las entradas\n",
-    "    ...\n",
+    "    for star in stars:\n",
+    "        x = star[0]\n",
+    "        y = star[1]\n",
+    "        star[0] = x + 1\n",
     "    # Representamos el nuevo estado\n",
     "    screen.fill(BLACK)\n",
-    "    ...\n",
+    "    for star in stars:\n",
+    "        x = star[0]\n",
+    "        y = star[1]\n",
+    "        pygame.draw.circle(screen, WHITE, (x, y), 2)  \n",
     "    pygame.display.update()\n",
     "\n",
     "pygame.quit()"
@@ -566,6 +710,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pygame\n",
+    "import time\n",
+    "import random\n",
+    "\n",
     "SIZE = WIDTH, HEIGHT = (640, 480)\n",
     "\n",
     "pygame.init()\n",
